@@ -9,7 +9,7 @@
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
 // Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003 Red Hat, Inc.
-// Copyright (C) 2002 Gary Thomas
+// Copyright (C) 2002, 2003 Gary Thomas
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
@@ -433,7 +433,7 @@ extern void __arp_handler(pktbuf_t *pkt);
  * Return true and fills in 'eth_addr' if successful, false
  * if unsuccessful.
  */
-extern int __arp_request(ip_addr_t *ip_addr, enet_addr_t *eth_addr);
+extern int __arp_request(ip_addr_t *ip_addr, enet_addr_t *eth_addr, int allow_self);
 
 /*
  * Lookup an address from the local ARP cache.  If not found,
